--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     "customurlscheme": "moodlemobile",
     "siteurl": "http://trainings.quint-essence.com",
     "multisitesdisplay": "select",
-    "skipssoconfirmation": "true",
+    "skipssoconfirmation": "false",
     "forcedefaultlanguage": "false",
     "privacypolicy": "https://moodle.org/mod/page/view.php?id=8148"
 }
