--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "demo_sites": {},
     "gcmpn": "694767596569",
     "customurlscheme": "moodlemobile",
-    "siteurl": "http://trainings.quint-essence.com",
+    "siteurl": "https://trainings.quint-essence.com",
     "multisitesdisplay": "select",
     "skipssoconfirmation": "false",
     "forcedefaultlanguage": "false",
